# Places_Remember

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  dockerfile  pyproject.toml  readme.md
config/: .env  .env.example  settings.py  urls.py
places/: admin.py  forms.py  models.py  urls.py  views.py
places/fixtures/: auth_user.json  places_place.json
places/migrations/: 0001_initial.py
places/static/places/css/: styles.css
places/templates/places/: add_place.html  home.html
places/tests/: tests_add_post.py  tests_get_pages.py
templates/: 404.html  base.html  index.html
templates/account/: login.html
templates/account/snippets/: custom_social_login.html
users/: urls.py  views.py
